--- a/web development project/webdev/index.html
+++ b/web development project/webdev/index.html
@@ -1,7 +1,27 @@
-<h1>Welcome to My Website!</h1>
-<!-- Add an image of yourself that links to the about page -->
- <a href="public/about.html"><img src="assets/images/cat.png" alt="My picture"/></a>
+<!DOCTYPE html>
+<html lang="en">
 
-<hr />
-<!-- Add a link to your contact me page here -->
- <a href="public/contact.html">Contact me</a>
+<head>
+  <meta charset="UTF-8">
+  <title>CSS Cascade</title>
+  <link rel="stylesheet" href="./style.css">
+</head>
+
+<body>
+  <div id="outer-box" class="box">
+    <div class="box">
+      <p>Yellow Text</p>
+      <div class="box inner-box">
+        <p class="white-text">White Text</p>
+      </div>
+    </div>
+    <div class="box">
+      <p>Yellow Text</p>
+      <div class="box inner-box">
+        <p class="white-text">White Text</p>
+      </div>
+    </div>
+  </div>
+</body>
+
+</html>
